fix: SetShowEventDetails visible after clicking on lower navbar items

--- a/Event_Tracker_App/Event.Tracker.Web/src/App.css
+++ b/Event_Tracker_App/Event.Tracker.Web/src/App.css
@@ -24,6 +24,7 @@
 .listevents-container,
 .savedevents-container,
 .createevent-container{
+  opacity: 0;
   visibility: hidden;
 }
 
